# BVH-Construction

./: .gitignore  .gitmodules  CMakeLists.txt  DPHPC-BVH.sln  DPHPC-BVH.vcxproj  DPHPC-BVH.vcxproj.filters  README.md  Scalability_Conference_BuildTreeHierarchy.txt  collect_benchmark_data.sh  conference.csv  make_all_plots.sh  plot.ipynb  plot_qq.py  stat.ipynb  submit.sh
Bench/: BenchmarkBVHBuilder.cc  CMakeLists.txt  CudaBenchmarkUtil.cu  CudaBenchmarkUtil.cuh  TestBenchmarkFramework.cc  Timer.cpp  Timer.h
Include/: BVH.h  BVHBuilder.h  CubWrapper.cuh  CudaBVHBuilder.cuh  CudaBVHBuilder.h  DPHPC.h  Geometry.h  Memory.h  Parallel.h  RecursiveBVHBuilder.h  Renderer.h  Sampling.h  Scene.h  StringPrint.h  Transform.h  Triangle.h  Utilities.h  tiny_obj_loader.h
Source/: BVH.cpp  BVH.h  BVHBuilder.cpp  BVHBuilder.h  CudaBVHBuilder.cpp  CudaBVHBuilder.cu  CudaBVHBuilder.cuh  CudaBVHBuilder.h  DPHPC.h  Geometry.h  Memory.cpp  Memory.h  Parallel.h  Primitive.h  RecursiveBVHBuilder.cpp  RecursiveBVHBuilder.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Triangle.cpp
Src/: BVH.cpp  BVHBuilder.cpp  CMakeLists.txt  CubWrapper.cu  CudaBVHBuilder.cpp  CudaBVHBuilder.cu  Main.cpp  Memory.cpp  Parallel.cpp  Renderer.cpp  Scene.cpp  Transform.cpp  Triangle.cpp
Test/: CMakeLists.txt  CudaBVHBuilderTest.cc  Main.cpp  cubWrapperTest.cc  cudaBVHBuilderTest.cc  unitTestTest.cc
plot/: plot.ipynb  scalability_new.txt  stat.ipynb
plotter/: optix_construction_baseline.txt  plot.py  plot_boxplot.py  plot_distribution.py  plot_qq.py  plot_series.py  plot_stages.py  requirements.txt  util.py
